--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,6 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 FiniteDifferenceMatrices = "a7a66f33-e7b8-47af-b618-f9b5bea05f3d"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Markdown = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
